Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19403

[ComDlg] Selection Cross not drawn by the color picker

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Wine
    • None

    Description

      reactos-bootcd-0.4.15-dev-7322-g3558b7b-x86-gcc-lin-dbg

      Comdlg's color picker does not draw the "selection cross" while CC_PaintCross is present and called : https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/comdlg32/colordlg.c;h=1e8c26bf3244203ffac37d3ebcb3c7a52cb961e6;hb=f380a5104034604de6a8ca3d7b90a15a459e894b#l516 

      Expected result : 

      Same bug in Wine : 

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              KRosUser KRosUser
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: