[COMDLG32] Color Picker: Fix black cross (#6242)

JIRA issue: CORE-19403, CORE-19405
- Fix HRGN handle leak.
- Fix black cross coordinates.